--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*.head1{
+.head1{
     font-size: 40px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -16,4 +16,4 @@
     padding: 5px;
     margin: auto;
     border-radius: 10px;
-}*/
+}
