--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,19 @@
 .head1{
     font-size: 40px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: SUSE;
+    text-align: center;
 }
 
 .subhead{
     font-size: 15px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    
+    font-family: SUSE;
+    text-align: center;
+}
+
+.body{
+    font-size: 15px;
+    font-family: SUSE;
+    text-align: center;
 }
 
 .button1{
